my-website/service/test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress-ingress
  namespace: infra
spec:
  entryPoints:
    - web  # <--- 반드시 web(80포트)으로 설정!
  routes:
  - match: Host(`192.168.1.200`) || HostRegexp(`{host:.+}`)
    kind: Rule
    services:
    - name: wordpress-service
      namespace: infra
      port: 80
